added Day 1 plan emoji

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -1,1 +1,70 @@
-﻿{"cells":[{"cell_type":"markdown","metadata":{},"source":["#  Day 1  Big Picture, Tools Landscape & Data Handling in Python\n\n** Instruction (3h)**  \n-  Big picture: data analysis workflow  \n-  Tools comparison: Python vs Excel, Power BI, Tableau (how they complement each other)  \n-  Jupyter Notebooks for interactive analysis & documentation  \n-  Python basics for data work  \n-  Intro to `pandas` DataFrames  \n-  Data import (CSV, Excel, JSON) & inspection  \n\n** Practical (1h)**  \n-  Load & filter a dataset  \n-  Compute basic statistics  \n\n** Reflection (1h)**  \n-  Group discussion: comparing workflows in Python vs spreadsheets  \n-  Mini quiz on `pandas` basics  \n-  Troubleshoot common import/inspection issues"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.0"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Day 1  Big Picture, Tools Landscape & Data Handling in Python\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "markdown"
+    }
+   },
+   "source": [
+    "## 📅 Day 1 — Plan -  Big Picture, Tools Landscape & Data Handling in Python\n",
+    "\n",
+    "**📚 Instruction (3h)**  \n",
+    "- 🌐 Big picture: data analysis workflow  \n",
+    "- ⚖️ Tools comparison: Python vs Excel, Power BI, Tableau (how they complement each other)  \n",
+    "- 📓 Jupyter Notebooks for interactive analysis & documentation  \n",
+    "- 🐍 Python basics for data work  \n",
+    "- 📊 Intro to `pandas` DataFrames  \n",
+    "- 📥 Data import (CSV, Excel, JSON) & inspection  \n",
+    "\n",
+    "**🛠 Practical (1h)**  \n",
+    "- 📂 Load & filter a dataset  \n",
+    "- ➗ Compute basic statistics  \n",
+    "\n",
+    "**🔄 Reflection (1h)**  \n",
+    "- 💬 Group discussion: comparing workflows in Python vs spreadsheets  \n",
+    "- 📝 Mini quiz on `pandas` basics  \n",
+    "- 🐞 Troubleshoot common import/inspection issues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "This adds the same emojis used in your README.md file to make the notebook consistent with your course documentation style."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
