Finally emojis for all 5 days

--- a/notebooks/day3_exploratory_data_analysis.ipynb
+++ b/notebooks/day3_exploratory_data_analysis.ipynb
@@ -1,1 +1,50 @@
-﻿{"cells":[{"cell_type":"markdown","metadata":{},"source":["#  Day 3  Exploratory Data Analysis (EDA)\n\n** Instruction (3h)**  \n-  Descriptive statistics  \n-  Distribution exploration  \n-  Outlier detection  \n-  Correlation analysis  \n-  Grouping & aggregation  \n-  Quick profiling tools  \n\n** Practical (1h)**  \n-  Grouped analysis & histograms  \n-  Outlier detection  \n-  Quick profiling report  \n\n** Reflection (1h)**  \n-  Peer review of visual summaries  \n-  Short quiz on choosing EDA methods  \n-  Discussion: how EDA shapes further analysis"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.0"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📅 Day 3 — Exploratory Data Analysis (EDA)\n",
+    "\n",
+    "**📚 Instruction (3h)**  \n",
+    "- 📈 Descriptive statistics  \n",
+    "- 📊 Distribution exploration  \n",
+    "- 🚨 Outlier detection  \n",
+    "- 🔗 Correlation analysis  \n",
+    "- 🗂 Grouping & aggregation  \n",
+    "- ⚡ Quick profiling tools  \n",
+    "\n",
+    "**🛠 Practical (1h)**  \n",
+    "- 📂 Grouped analysis & histograms  \n",
+    "- 🚨 Outlier detection  \n",
+    "- 📋 Quick profiling report  \n",
+    "\n",
+    "**🔄 Reflection (1h)**  \n",
+    "- 👥 Peer review of visual summaries  \n",
+    "- 📝 Short quiz on choosing EDA methods  \n",
+    "- 💬 Discussion: how EDA shapes further analysis"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
