--- a/notebooks/day2_data_cleaning_preparation.ipynb
+++ b/notebooks/day2_data_cleaning_preparation.ipynb
@@ -1,1 +1,50 @@
-﻿{"cells":[{"cell_type":"markdown","metadata":{},"source":["#  Day 2  Data Cleaning & Preparation\n\n** Instruction (3h)**  \n-  Handling missing values  \n-  Removing duplicates  \n-  Data type conversion  \n-  Parsing dates  \n-  Feature engineering basics  \n-  Combining datasets  \n-  Intro to categorical encoding  \n\n** Practical (1h)**  \n-  Clean a messy dataset  \n-  Merge with a secondary dataset  \n\n** Reflection (1h)**  \n-  Review: common pitfalls in cleaning  \n-  Discuss real-world cleaning challenges  \n-  Recap exercise: identify cleaning steps for a small example dataset"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.0"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📅 Day 2 — Data Cleaning & Preparation\n",
+    "\n",
+    "**📚 Instruction (3h)**  \n",
+    "- 🧹 Handling missing values  \n",
+    "- 🗑 Removing duplicates  \n",
+    "- 🔄 Data type conversion  \n",
+    "- 📅 Parsing dates  \n",
+    "- 🏗 Feature engineering basics  \n",
+    "- 🔗 Combining datasets  \n",
+    "- 🏷 Intro to categorical encoding  \n",
+    "\n",
+    "**🛠 Practical (1h)**  \n",
+    "- 🧽 Clean a messy dataset  \n",
+    "- 🔀 Merge with a secondary dataset  \n",
+    "\n",
+    "**🔄 Reflection (1h)**  \n",
+    "- 🧐 Review: common pitfalls in cleaning  \n",
+    "- 💬 Discuss real-world cleaning challenges  \n",
+    "- 📝 Recap exercise: identify cleaning steps for a small example dataset"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
