--- a/notebooks/day5_storytelling_dashboards_ai.ipynb
+++ b/notebooks/day5_storytelling_dashboards_ai.ipynb
@@ -1,1 +1,52 @@
-﻿{"cells":[{"cell_type":"markdown","metadata":{},"source":["#  Day 5  Storytelling, Dashboards & AI in Data Analysis\n\n** Instruction (3h)**  \n-  Turning analysis into a narrative  \n-  Visual communication best practices  \n-  Streamlit dashboards  \n-  Exporting results (PDF, HTML)  \n-  Automation of repetitive analysis  \n-  **AI & ML in Data Analysis**  \n  -  Clustering, classification, regression (intro)  \n  -  LLM-assisted coding, EDA, visualization (ChatGPT, Copilot, MCP, agents)  \n  -  Benefits & limitations  \n\n** Practical (1h)**  \n-  Build a mini dashboard  \n-  Create a Jupyter Notebook report with AI-assisted code suggestions  \n\n** Reflection (1h)**  \n-  Discussion: how AI changes the analysis workflow  \n-  Peer feedback on dashboard clarity & storytelling  \n-  Short quiz: matching problem types to ML models"]}],"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.0"}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 📅 Day 5 — Storytelling, Dashboards & AI in Data Analysis\n",
+    "\n",
+    "**📚 Instruction (3h)**  \n",
+    "- 📖 Turning analysis into a narrative  \n",
+    "- 🎯 Visual communication best practices  \n",
+    "- 🖥 Streamlit dashboards  \n",
+    "- 📤 Exporting results (PDF, HTML)  \n",
+    "- 🔁 Automation of repetitive analysis  \n",
+    "- 🤖 **AI & ML in Data Analysis**\n",
+    "  - 📌 Clustering, classification, regression (intro)  \n",
+    "  - 💡 LLM-assisted coding, EDA, visualization (ChatGPT, Copilot, MCP, agents)  \n",
+    "  - ⚠️ Benefits & limitations  \n",
+    "\n",
+    "**🛠 Practical (1h)**  \n",
+    "- 🖥 Build a mini dashboard  \n",
+    "- 🤝 Create a Jupyter Notebook report with AI-assisted code suggestions  \n",
+    "\n",
+    "**🔄 Reflection (1h)**  \n",
+    "- 💬 Discussion: how AI changes the analysis workflow  \n",
+    "- 👥 Peer feedback on dashboard clarity & storytelling  \n",
+    "- 📝 Short quiz: matching problem types to ML models"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
