Added pictures to the introduction notebook to illustrate the evolution of data analysis from the 19th century to modern times, emphasizing the role of AI tools in enhancing productivity and creativity in data workflows.

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -5,7 +5,33 @@
    "metadata": {},
    "source": [
     "#  Day 1  Big Picture, Tools Landscape & Data Handling in Python\n",
-    "\n"
+    "\n",
+    "## Course Description\n",
+    "\n",
+    "This course provides a practical introduction to **data analysis** and **data visualization** using Python and modern AI-assisted tooling.  \n",
+    "Students will learn to work through the complete analytics workflow — from data collection, cleaning, and preparation, through exploratory data analysis (EDA), modeling, and visualization — with a focus on producing clear, actionable insights.  \n",
+    "\n",
+    "Core skills are built using Python’s rich data ecosystem, including **pandas**, **matplotlib**, **seaborn**, **plotly**, and **scikit-learn**.  \n",
+    "In addition, we explore the use of **AI tools** such as ChatGPT, GitHub Copilot, and agent frameworks to enhance productivity, automate repetitive tasks, and assist in coding, exploration, and communication.  \n",
+    "\n",
+    "By the end of the course, students should have a basic idea on how to analyze datasets, create compelling visualizations, build simple dashboards, and integrate AI assistance into their data workflows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: flex; align-items: center; justify-content: center; gap: 30px;\">\n",
+    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/19th_century_data_analysis_gothic_prompt.png?raw=true\" width=\"600\"/>\n",
+    "\n",
+    "  <!-- Thick arrow as inline SVG -->\n",
+    "  <svg width=\"80\" height=\"40\" viewBox=\"0 0 80 40\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+    "    <line x1=\"0\" y1=\"20\" x2=\"70\" y2=\"20\" stroke=\"black\" stroke-width=\"6\" stroke-linecap=\"round\"/>\n",
+    "    <polygon points=\"70,10 80,20 70,30\" fill=\"black\"/>\n",
+    "  </svg>\n",
+    "\n",
+    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_1862_Data_Analysis.png?raw=true\" width=\"600\"/>\n",
+    "</div>"
    ]
   },
   {
