added alternative picture for rtu data analysis course

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -22,15 +22,15 @@
    "metadata": {},
    "source": [
     "<div style=\"display: flex; align-items: center; justify-content: center; gap: 30px;\">\n",
-    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/19th_century_data_analysis_gothic_prompt.png?raw=true\" width=\"600\"/>\n",
+    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/19th_century_data_analysis_gothic_prompt.png?raw=true\" width=\"400\"/>\n",
     "\n",
     "  <!-- Thick arrow as inline SVG -->\n",
     "  <svg width=\"80\" height=\"40\" viewBox=\"0 0 80 40\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-    "    <line x1=\"0\" y1=\"20\" x2=\"70\" y2=\"20\" stroke=\"black\" stroke-width=\"6\" stroke-linecap=\"round\"/>\n",
-    "    <polygon points=\"70,10 80,20 70,30\" fill=\"black\"/>\n",
+    "    <line x1=\"0\" y1=\"20\" x2=\"70\" y2=\"20\" stroke=\"rgb(0, 88, 84)\" stroke-width=\"6\" stroke-linecap=\"round\"/>\n",
+    "    <polygon points=\"70,10 80,20 70,30\" fill=\"rgb(0, 88, 84)\"/>\n",
     "  </svg>\n",
     "\n",
-    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_1862_Data_Analysis.png?raw=true\" width=\"600\"/>\n",
+    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_1862_Data_Analysis.png?raw=true\" width=\"400\"/>\n",
     "</div>"
    ]
   },
