Added how Python fits into the course on day 5

--- a/notebooks/day5_storytelling_dashboards_ai.ipynb
+++ b/notebooks/day5_storytelling_dashboards_ai.ipynb
@@ -26,6 +26,138 @@
     "- 👥 Peer feedback on dashboard clarity & storytelling  \n",
     "- 📝 Short quiz: matching problem types to ML models"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How Python Fits into the Data Analysis & Visualization Process\n",
+    "\n",
+    "### 1. Define Problem 🧭  \n",
+    "Python helps here indirectly — you’re not coding yet, but you might use:  \n",
+    "- **Jupyter Notebooks** to capture your thought process, problem statement, and initial ideas  \n",
+    "- **Markdown cells** for documenting hypotheses and scope  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- Jupyter Notebook / JupyterLab  \n",
+    "- Markdown for structured notes  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. Collect Data 📥  \n",
+    "You can’t analyze what you don’t have, so:  \n",
+    "- Collect from internal sources (databases, logs, CRM)  \n",
+    "- Pull from external APIs and open datasets  \n",
+    "- Parse HTML for web data  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `pandas` for file imports (CSV, Excel, JSON, Parquet)  \n",
+    "- `requests`, `httpx` for APIs  \n",
+    "- `BeautifulSoup`, `Scrapy` for web scraping  \n",
+    "- `SQLAlchemy`, `psycopg2`, `pymysql` for databases  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. Clean & Prepare Data 🧹  \n",
+    "Most of the work happens here:  \n",
+    "- Handle missing values (`fillna`, `dropna`)  \n",
+    "- Remove duplicates (`drop_duplicates`)  \n",
+    "- Fix data types (`astype`)  \n",
+    "- Parse dates and times (`datetime`)  \n",
+    "- Create new features from existing columns  \n",
+    "- Combine datasets (`merge`, `concat`)  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `pandas`  \n",
+    "- `numpy`  \n",
+    "- `category_encoders`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4. Explore Data 🔍  \n",
+    "The “detective work” phase:  \n",
+    "- Compute summary statistics (`.describe()`)  \n",
+    "- Check data distributions (histograms, boxplots)  \n",
+    "- Identify outliers and anomalies  \n",
+    "- Look for relationships between variables  \n",
+    "- Test initial hypotheses  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `pandas`  \n",
+    "- `matplotlib`  \n",
+    "- `seaborn`  \n",
+    "- `ydata-profiling`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 5. Model & Analyze 📊  \n",
+    "Turn exploration into structured insight:  \n",
+    "- Choose statistical tests (t-test, ANOVA, correlation)  \n",
+    "- Build predictive models (regression, classification)  \n",
+    "- Cluster data (KMeans, DBSCAN)  \n",
+    "- Validate and evaluate models  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `scipy.stats`  \n",
+    "- `statsmodels`  \n",
+    "- `scikit-learn`  \n",
+    "- `xgboost`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 6. Visualize Data 📈  \n",
+    "Make insights clear and accessible:  \n",
+    "- Select the right chart type for the data  \n",
+    "- Use color and annotations effectively  \n",
+    "- Create interactive dashboards  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `matplotlib`  \n",
+    "- `seaborn`  \n",
+    "- `plotly`  \n",
+    "- `bokeh`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 7. Interpret & Tell the Story 🗣️  \n",
+    "Data doesn’t speak for itself:  \n",
+    "- Explain the “why” behind patterns  \n",
+    "- Link results back to original questions  \n",
+    "- Highlight limitations and uncertainty  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- Jupyter Notebook / JupyterLab  \n",
+    "- `Streamlit` for narrative dashboards  \n",
+    "- `transformers` for automated summaries  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 8. Communicate Results 📢  \n",
+    "Deliver findings to your audience:  \n",
+    "- Create clear, concise reports  \n",
+    "- Build interactive dashboards  \n",
+    "- Present results live  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `nbconvert` (export notebooks)  \n",
+    "- `plotly`  \n",
+    "- `Dash`  \n",
+    "- `Streamlit`  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 9. Act & Monitor 🔄  \n",
+    "Close the loop:  \n",
+    "- Implement recommendations  \n",
+    "- Track key metrics over time  \n",
+    "- Update analyses with new data  \n",
+    "\n",
+    "📦 **Key Python tools:**  \n",
+    "- `cron`  \n",
+    "- `apscheduler`  \n",
+    "- `airflow`  \n",
+    "- `prefect`  \n"
+   ]
   }
  ],
  "metadata": {
