--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#  Day 1  Big Picture, Tools Landscape & Data Handling in Python\n",
     "\n",
-    "Open in Google Colab: [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/notebooks/day1_big_picture_intro.ipynb)\n",
+    "Open in Google Colab (if you have not done so yet!): [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/notebooks/day1_big_picture_intro.ipynb)\n",
     "\n",
     "## Course Description\n",
     "\n",
