Added about Instructor section to the notebook.

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -24,16 +24,24 @@
    "metadata": {},
    "source": [
     "<div style=\"display: flex; align-items: center; justify-content: center; gap: 30px;\">\n",
-    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/19th_century_data_analysis_gothic_prompt.png?raw=true\" width=\"400\"/>\n",
+    "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_Analysis_Puzzled.png?raw=true\" width=\"400\"/>\n",
     "\n",
     "  <!-- Thick arrow as inline SVG -->\n",
-    "  <svg width=\"80\" height=\"40\" viewBox=\"0 0 80 40\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-    "    <line x1=\"0\" y1=\"20\" x2=\"70\" y2=\"20\" stroke=\"rgb(0, 88, 84)\" stroke-width=\"6\" stroke-linecap=\"round\"/>\n",
-    "    <polygon points=\"70,10 80,20 70,30\" fill=\"rgb(0, 88, 84)\"/>\n",
-    "  </svg>\n",
+    "  <span style=\"font-size:60px; line-height:20px; color:rgb(0,88,84);\">⇒</span>\n",
     "\n",
     "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_1862_wall.png?raw=true\" width=\"400\"/>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About Instructor\n",
+    "\n",
+    " Valdis Saulespurēns is a lecturer at Riga Technical University, where he teaches Python, JavaScript, algorithms, AI and other computer science subjects. He also works at as a researcher and developer at the National Library of Latvia. Valdis has a specialization in Machine Learning and Data Analysis, and he enjoys **transforming disordered data into structured knowledge**. With more than 30 years of programming experience, Valdis began his professional career by writing programs for quantum scientists at the University of California, Santa Barbara. Before moving into teaching, he developed software for a radio broadcast equipment manufacturer. Valdis holds a Master's degree in Computer Science from the University of Latvia.\n",
+    "\n",
+    " E-mail: valdis.saulespurens@rtu.lv"
    ]
   },
   {
