added emojis to key terms

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -102,31 +102,30 @@
     "\n",
     "### General Data and Computing Terms\n",
     "\n",
-    "* Data Analysis - The process of inspecting, cleaning, transforming, and modeling data to discover useful information, inform conclusions, and support decision-making.\n",
-    "* Data Visualization - The graphical representation of information and data, using visual elements like charts, graphs, and maps to make complex data more accessible, understandable, and usable.\n",
-    "* Data Science - An interdisciplinary field that uses scientific methods, processes, algorithms, and systems to extract knowledge and insights from structured and unstructured data.\n",
-    "* Big Data - Extremely large datasets that may be analyzed computationally to reveal patterns, trends, and associations, especially relating to human behavior and interactions.\n",
-    "*Informally - Big Data - what does not fit into local computer memory, or is too large to be processed by a single machine in a reasonable time.*\n",
-    "* Cloud Computing - The delivery of computing services over the internet (\"the cloud\"), allowing for on-demand access to a shared pool of configurable computing resources (e.g., servers, storage, databases, networking, software).\n",
-    "*Informally - Cloud Computing - computing on someone else's computer, which you access via the internet.*\n",
+    "* 📊 Data Analysis - The process of inspecting, cleaning, transforming, and modeling data to discover useful information, inform conclusions, and support decision-making.  \n",
+    "* 📈 Data Visualization - The graphical representation of information and data, using visual elements like charts, graphs, and maps to make complex data more accessible, understandable, and usable.  \n",
+    "* 🧪 Data Science - An interdisciplinary field that uses scientific methods, processes, algorithms, and systems to extract knowledge and insights from structured and unstructured data.  \n",
+    "* 🗄️ Big Data - Extremely large datasets that may be analyzed computationally to reveal patterns, trends, and associations, especially relating to human behavior and interactions.  \n",
+    "  *ℹ️ Informally - Big Data = what does not fit into local computer memory, or is too large to be processed by a single machine in a reasonable time.*  \n",
+    "* ☁️ Cloud Computing - The delivery of computing services over the internet (\"the cloud\"), allowing for on-demand access to a shared pool of configurable computing resources (e.g., servers, storage, databases, networking, software).  \n",
+    "  *ℹ️ Informally - Cloud Computing = computing on someone else's computer, accessed via the internet.*  \n",
     "\n",
     "### AI and Machine Learning Terms\n",
-    "* Machine Learning - A subset of artificial intelligence (AI) that involves the use of algorithms and statistical models to enable computers to perform tasks without explicit instructions, relying on patterns and inference instead.\n",
-    "* LLM - Large Language Model, a type of AI model trained on vast amounts of text data to understand and generate human-like language, enabling applications like chatbots, translation, and content generation. LLMs are type of Machine Learning model.\n",
-    "* Github Copilot - An AI-powered code completion tool developed by GitHub, which uses machine learning to suggest code snippets and entire functions as developers write code in various programming languages.\n",
-    "* ChatGPT - A conversational AI model developed by OpenAI, based on the GPT architecture, one of many LLMs, designed to understand and generate human-like text responses in a conversational context.\n",
     "\n",
+    "* 🤖 Machine Learning - A subset of artificial intelligence (AI) that involves the use of algorithms and statistical models to enable computers to perform tasks without explicit instructions, relying on patterns and inference instead.  \n",
+    "* 🧠 LLM - Large Language Model, a type of AI model trained on vast amounts of text data to understand and generate human-like language, enabling applications like chatbots, translation, and content generation. LLMs are a type of Machine Learning model.  \n",
+    "* 👨‍💻 Github Copilot - An AI-powered code completion tool developed by GitHub, which uses machine learning to suggest code snippets and entire functions as developers write code in various programming languages.  \n",
+    "* 💬 ChatGPT - A conversational AI model developed by OpenAI, based on the GPT architecture, one of many LLMs, designed to understand and generate human-like text responses in a conversational context.  \n",
     "\n",
     "### Programming and Data Handling Terms\n",
-    "* Programming - The process of designing and building executable computer software to accomplish a specific task or solve a problem, typically involving writing code in a programming language.\n",
-    "* Python - A high-level, interpreted programming language known for its readability and versatility, widely used in data analysis, web development, automation, and more.\n",
-    "* Pandas - A powerful open-source data manipulation and analysis library for Python, providing data structures\n",
-    "* Jupyter Notebook - An open-source web application that allows you to create and share documents containing live code, equations, visualizations, and narrative text, widely used for data analysis and scientific computing.\n",
-    "* Google Colab - A free and optionally paid, cloud-based Jupyter notebook environment provided by Google that allows users to write and execute Python code in the browser, with access to powerful computing resources.\n",
     "\n",
-    "### Any data terms you would like to add?\n",
+    "* 🖥️ Programming - The process of designing and building executable computer software to accomplish a specific task or solve a problem, typically involving writing code in a programming language.  \n",
+    "* 🐍 Python - A high-level, interpreted programming language known for its readability and versatility, widely used in data analysis, web development, automation, and more.  \n",
+    "* 🐼 Pandas - A powerful open-source data manipulation and analysis library for Python, providing data structures.  \n",
+    "* 📓 Jupyter Notebook - An open-source web application that allows you to create and share documents containing live code, equations, visualizations, and narrative text, widely used for data analysis and scientific computing.  \n",
+    "* 🌐 Google Colab - A free and optionally paid, cloud-based Jupyter notebook environment provided by Google that allows users to write and execute Python code in the browser, with access to powerful computing resources.  \n",
     "\n",
-    "\n"
+    "### Any data terms you would like to add?\n"
    ]
   },
   {
@@ -358,26 +357,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "📦 **Mini Task: Markdown Practice**\n",
-    "\n",
-    "Create a **bulleted list** of 3 of your favorite websites.  \n",
-    "Each list item should be a **clickable link**.\n",
-    "\n",
-    "👉 Example format (replace with your own sites):\n",
-    "\n",
-    "- [Riga Technical University](https://www.rtu.lv)  \n",
-    "- [Python Official](https://www.python.org)  \n",
-    "- [Pandas Documentation](https://pandas.pydata.org/docs/)\n",
-    "\n",
-    "---\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 💻 Code Cells in Jupyter\n",
     "\n",
     "Code cells let you **write and run code directly** inside the notebook.  \n",
@@ -440,7 +419,7 @@
    "source": [
     "---\n",
     "\n",
-    "📦 **Mini Task: Your First Variable**\n",
+    "## 📦 **Mini Task: Your First Variable**\n",
     "\n",
     "1. Create a variable with your **first name** as a string.  \n",
     "2. Print a greeting that includes your name using an **f-string**.  \n",
@@ -450,6 +429,104 @@
     "```python\n",
     "my_name = \"Anna\"\n",
     "print(f\"Hello, my name is {my_name}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring Variables and Data Types in Python with Jupyter Notebooks\n",
+    "\n",
+    "### Dynamic Typing in Python\n",
+    "\n",
+    "When we create a variable in Python, we are essentially creating a **label** for a value stored in memory.  \n",
+    "Variables can hold different types of data, such as numbers, strings, lists, and more.\n",
+    "\n",
+    "Python is a dynamically typed language, which means you don't need to declare the type of a variable when you create it.  \n",
+    "The type is determined automatically based on the value assigned to the variable.\n",
+    "This value can be changed later, and the variable will adapt to the new type if necessary.\n",
+    "\n",
+    "```python\n",
+    "# Example of variable assignment and type change\n",
+    "my_variable = 42  # Initially an integer\n",
+    "print(type(my_variable))  # Output: <class 'int'>\n",
+    "my_variable = \"Hello, World!\"  # Now a string\n",
+    "print(type(my_variable))  # Output: <class 'str'>\n",
+    "```\n",
+    "\n",
+    "Now generally you do not want to change the type of a variable like this too much in real code, as it can lead to confusion and bugs.\n",
+    "However, it is useful to know that Python allows this flexibility.\n",
+    "\n",
+    "### Basic Data Types in Python\n",
+    "\n",
+    "Python has several built-in data types that are commonly used in data analysis and programming.\n",
+    "\n",
+    "### Common Data Types\n",
+    "\n",
+    "#### Primitive Data Types\n",
+    "These are the basic building blocks of data in Python. They include:\n",
+    "- **Integers**: Whole numbers, e.g., `42`, `-7`\n",
+    "- **Floats**: Decimal numbers, e.g., `3.14`, `-0.001`\n",
+    "- **Strings**: Text data, e.g., `\"Hello\"`, `'RTU'`\n",
+    "- **Booleans**: True/False values, e.g., `True`, `False`\n",
+    "- **None**: Represents the absence of a value, e.g., `None` (other languages may call this `null` or `nil`)\n",
+    "\n",
+    "#### Composite Data Types\n",
+    "These are collections of other data types and can hold multiple values:\n",
+    "- **Lists**: Ordered collections of items, e.g., `[1, 2, 3]`, `[\"apple\", \"banana\"]`\n",
+    "- **Dictionaries**: Key-value pairs, e.g., `{\"name\": \"RTU\", \"year\": 2025}`\n",
+    "- **Tuples**: Immutable ordered collections, e.g., `(1, 2, 3)`, `(\"apple\", \"banana\")`\n",
+    "- **Sets**: Unordered collections of unique items, e.g., `{1, 2, 3}`, `{\"apple\", \"banana\"}`\n",
+    "\n",
+    "#### Custom Data Types\n",
+    "You can also create your own data types using classes, but we will not cover that in this course.\n",
+    "We will however use some of the custom data types from libraries like `pandas` and `numpy`, which are built on top of Python's basic types.\n",
+    "\n",
+    "### Performing operations on different data types\n",
+    "You can perform various operations on these data types, such as arithmetic operations on numbers, string concatenation, and list manipulation.\n",
+    "\n",
+    "Numeric types support arithmetic operations like addition, subtraction, multiplication, and division.\n",
+    "\n",
+    "Strings support concatenation, slicing, and various string methods.\n",
+    "\n",
+    "\n",
+    "### Exploring Data Types in Jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 3.14 Hello, World! True None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's create all primitive data types in Python\n",
+    "my_integer = 42 # integer - whole number\n",
+    "my_float = 3.14 # float - number with decimal point \n",
+    "my_string = \"Hello, World!\" # string - text enclosed in quotes\n",
+    "my_boolean = True # boolean - True or False value\n",
+    "my_nothing = None # None - represents no value or null\n",
+    "\n",
+    "print(my_integer, my_float, my_string, my_boolean, my_nothing) # print all variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking Data Types\n",
+    "You can check the type of a variable using the `type()` function.\n",
+    "\n",
+    "However Google Colab and Jupyter Notebooks also provide a convenient way to display the type of a variable directly in the output cell.\n",
+    "\n",
+    "In Google Colab, you can use Variable Inspector to see the type of a variable. Variable Inspector is a tool that shows all **CURRENTLY** active variables in the current notebook, their types, and values."
    ]
   }
  ],
