added data sets

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -357,6 +357,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
+    "## 📦 **Mini Task: Markdown Practice**\n",
+    "\n",
+    "Create a **bulleted list** of 3 of your favorite websites in a **new** Markdown cell.\n",
+    "Each list item should be a **clickable link**.\n",
+    "\n",
+    "👉 Example format (replace with your own sites):\n",
+    "\n",
+    "- [Riga Technical University](https://www.rtu.lv)  \n",
+    "- [Python Official](https://www.python.org)  \n",
+    "- [Pandas Documentation](https://pandas.pydata.org/docs/)\n",
+    "\n",
+    "Extra challenges:\n",
+    "- Add a **heading** for your list (e.g., \"My Favorite Websites\")\n",
+    "- Add an image related to one of the websites\n",
+    "- Use **bold** or *italic* formatting for emphasis\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 💻 Code Cells in Jupyter\n",
     "\n",
     "Code cells let you **write and run code directly** inside the notebook.  \n",
@@ -495,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -527,6 +551,75 @@
     "However Google Colab and Jupyter Notebooks also provide a convenient way to display the type of a variable directly in the output cell.\n",
     "\n",
     "In Google Colab, you can use Variable Inspector to see the type of a variable. Variable Inspector is a tool that shows all **CURRENTLY** active variables in the current notebook, their types, and values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running same cell multiple times\n",
+    "\n",
+    "When you run a code cell multiple times, the variable will retain its value from the last execution.\n",
+    "This means you can modify the variable and see the changes reflected in subsequent runs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Valdis! Welcome to year 2000.\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 2000 # reassigning a new value to the variable year which we created earlier\n",
+    "# this overwrites the previous value of year\n",
+    "message = f\"Hello {name}! Welcome to year {year}.\" # updating the message with the new year\n",
+    "print(message) # print the updated message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Next year will be 2001.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now let us add one year to the year variable\n",
+    "year += 1 # this is a shorthand for year = year + 1\n",
+    "# we can also use year = year + 1, but += is shorter and more readable\n",
+    "print(f\"Next year will be {year}.\") # print the next year\n",
+    "# note how if we run the cell again, the year will be 2001, then 2002, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Good Practice: Notebook should be runnable from top to bottom\n",
+    "\n",
+    "When you create a Jupyter Notebook, it is a good practice to ensure that the notebook can be run from top to bottom without any errors. \n",
+    "\n",
+    "Jupyter is very flexible and allows you to run cells in any order, but this can lead to confusion if the notebook is not structured properly.\n",
+    "\n",
+    "If you plan on sharing your notebook with others, or if you want to ensure that it works correctly in the future, it is best to follow this practice.\n",
+    "This means that you should not rely on running cells out of order, and you should ensure that all variables and functions are defined before they are used.\n",
+    "\n",
+    "Google Colab and other Jupyter environments let you have a \"Run all\" button that will run all cells in the notebook in order, which is a good way to check if your notebook is runnable from top to bottom.\n",
+    "\n",
+    "In our case we can restart and run all cells in the notebook by clicking on the \"Runtime\" menu and selecting \"Restart and run all\"."
    ]
   }
  ],
