Removed arror due to Colab not being picky

--- a/notebooks/day1_big_picture_intro.ipynb
+++ b/notebooks/day1_big_picture_intro.ipynb
@@ -27,7 +27,7 @@
     "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_Analysis_Puzzled.png?raw=true\" width=\"400\"/>\n",
     "\n",
     "  <!-- Thick arrow as inline SVG -->\n",
-    "  <span style=\"font-size:60px; line-height:20px; color:rgb(0,88,84);\">⇒</span>\n",
+    "  <!-- <span style=\"font-size:60px; line-height:20px; color:rgb(0,88,84);\">⇒</span> -->\n",
     "\n",
     "  <img src=\"https://github.com/ValRCS/RTU_Data_Analysis_Visualization_CPD/blob/main/img/RTU_1862_wall.png?raw=true\" width=\"400\"/>\n",
     "</div>"
@@ -42,6 +42,22 @@
     " Valdis Saulespurēns is a lecturer at Riga Technical University, where he teaches Python, JavaScript, algorithms, AI and other computer science subjects. He also works at as a researcher and developer at the National Library of Latvia. Valdis has a specialization in Machine Learning and Data Analysis, and he enjoys **transforming disordered data into structured knowledge**. With more than 30 years of programming experience, Valdis began his professional career by writing programs for quantum scientists at the University of California, Santa Barbara. Before moving into teaching, he developed software for a radio broadcast equipment manufacturer. Valdis holds a Master's degree in Computer Science from the University of Latvia.\n",
     "\n",
     " E-mail: valdis.saulespurens@rtu.lv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requisites for this course - the part taught by me\n",
+    "\n",
+    "There is also a course page at RTU DAS platform: [Python Data Analysis and Visualization](https://www.das.lv/platforma/course/view.php?id=34) - this will require that course administrator has added you to the course - we will use this platform for quizzes and feedback.\n",
+    "\n",
+    "* To successfully complete this course, you will need to complete the daily QUIZZES \n",
+    "\n",
+    "For multiple choice quizzes you should get at least 50% correct answers to pass the quiz.\n",
+    "* There will also be five daily practical assignments, that you can finish at home, and submit them by the end of the course.\n",
+    "\n",
+    "For assignments there is no hard requirement, as your previous experience and knowledge will be taken into account, so complete beginners can submit a minimally modified version of the notebooks, while more experienced students can submit more advanced versions of the notebooks with multiple improvements and additions."
    ]
   },
   {
@@ -88,10 +104,7 @@
     "- 🗣 **Lecture**: 3 academic hours of theory and practice with short breaks\n",
     "- 💻 **Hands-on Practice**: 1 academic hour of exercises and projects\n",
     "- 🔄 **Reflection**: 1 academic hour of Q&A, discussion, and feedback and quizzes\n",
-    "\n",
-    "## Other Course resources\n",
-    "\n",
-    "There is also a course page at RTU DAS platform: [Python Data Analysis and Visualization](https://www.das.lv/platforma/course/view.php?id=34) - this will require that course administrator has added you to the course - we will use this platform for quizzes and feedback."
+    "\n"
    ]
   },
   {
@@ -247,6 +260,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Now time for your own experiences!\n",
+    "\n",
+    "Let's take a 5 minute break then we will explore your own experiences if any with data analysis and visualization.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 📓 Jupyter Notebooks — The Very Basics\n",
     "\n",
     "Jupyter Notebooks are an interactive environment that combines **code**, **text**, and **results** in one place.  \n",
@@ -374,6 +397,15 @@
     "- Add a **heading** for your list (e.g., \"My Favorite Websites\")\n",
     "- Add an image related to one of the websites\n",
     "- Use **bold** or *italic* formatting for emphasis\n",
+    "---\n",
+    "\n",
+    "Note if you want an easy way to save your notebook, I recommend making a copy of the notebook in your Google Drive, and then you can download it from there as an `.ipynb` file or as a PDF.\n",
+    "You can also use the \"File\" menu in Google Colab to download the notebook as an `.ipynb` file or as a PDF.\n",
+    "\n",
+    "To make a copy of the notebook in your Google Drive, click on \"File\" → \"Save a copy in Drive\".\n",
+    "Then you will have your own editable copy of the notebook in your Google Drive, which you can then download or share as needed.\n",
+    "Theoretically it should be automatically saved in your Google Drive, but I recommend checking that it is there, just in case.\n",
+    "To force a save afterwards you can also click on \"File\" → \"Save\" or use the keyboard shortcut `Ctrl + S` (or `Cmd + S` on Mac).\n",
     "---"
    ]
   },
